added auth.css to style login and register

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,6 +4,8 @@
     justify-content: space-evenly;
     text-decoration: none;
     list-style-type: none;
+    margin-left: 8rem;
+    margin-right: 10rem;
 }
 
 .navbar__link {
