Register form styled. Commenting out css to make it more readable

--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -38,3 +38,11 @@
     letter-spacing: 2px;
     font-weight: 700;
 }
+
+.container--register {
+    color: black;
+    border: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 7rem;
+}
