--- a/src/components/master/MasterList.css
+++ b/src/components/master/MasterList.css
@@ -15,7 +15,15 @@
     color: #000000;
 }
 
-.question{
+.quest-cont{
     display: flex;
     justify-content: center;
+}
+
+.question{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
+    margin-bottom: 1%;
+    height: 2em;
+    width: 40em;
 }
