flashcard and buttons started

--- a/src/components/Dashboard/question.css
+++ b/src/components/Dashboard/question.css
@@ -1,4 +1,11 @@
-.question_card {
+.flashcard {
     display: flex;
     justify-content: center;
+}
+
+
+.button {
+    align-self: flex-end;
+    border-radius: 10px;
+    margin: 10px;
 }
